tests/errors/legacy/Egor/recovery/test18.c

void main()
{
	int А = 100;
	printid(А);
	int b = 10;
	printid(b);
}